Mon Feb  9 11:31:09 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (io_encoding_set): ignore second argument when external and
	  internal are same. [ruby-dev:37939]

Sun Feb  8 23:28:05 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* include/ruby/st.h, st.c: order entries by a linked list instead of
	  a loop to fix iteration miss when hash is modified during iteration.
	  [ruby-dev:37910]

Sun Feb  8 22:44:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward/rubysig.h (rb_thread_blocking_region_begin),
	  (rb_thread_blocking_region_end): marked as deprecated.

	* include/ruby/backward/rubysig.h (TRAP_BEG): fix for C++.  a
	  patch from Aman Gupta at [ruby-core:21934]

Sun Feb  8 19:05:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward/rubysig.h: extern "C" was missing.
	  [ruby-core:21929]

Sun Feb  8 18:34:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_s_binread): ensures file path.  [ruby-dev:37940]

Fri Feb  6 23:28:33 2009  Tanaka Akira  <akr@fsij.org>

	* io.c (io_fread): use rb_io_wait_readable for retry
	  avoid Errno::EINTR on ruby -e 'trap(:CHLD) {}; spawn("sleep 1"); STDIN.read'

Fri Feb  6 20:37:42 2009  Tanaka Akira  <akr@fsij.org>

	* signal.c (register_sigaltstack): ignore sigaltstack error.
	  It fails on OpenBSD 4.4 when pthread library is linked.

Fri Feb  6 12:03:47 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (process_options): -K and -E in shebang should be reflect to
	  default_external. [ruby-dev:37920]

Fri Feb  6 02:51:59 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_each_codepoint): update RDoc for
	  String#codepoints.  a patch from Radoslaw Bulat in
	  [ruby-core:21835]

Fri Feb  6 01:09:13 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* cont.c (cont_mark, cont_capture, cont_restore_1): use #else instead
	  of #elif.  a patch from NISHIMATSU Takeshi <t_nissie at yahoo.co.jp>
	  in [ruby-list:45856].
